# app/docs/swagger.yaml
@@ -70,6 +70,21 @@ definitions:
       storageTotal:
         type: integer
     type: object
+  datasource.DiffCmdOption:
+    properties:
+      databaseUrl:
+        $ref: '#/definitions/wgpb.ConfigurationVariable'
+      type:
+        $ref: '#/definitions/datasource.DiffCmdOptionType'
+    type: object
+  datasource.DiffCmdOptionType:
+    enum:
+    - migrations_to_dev
+    - dev_to_prod
+    type: string
+    x-enum-varnames:
+    - DiffCmdOptionMigrationsToDev
+    - DiffCmdOptionDevToProd
   fileloader.DataBatchResult:
     properties:
       dataName:
@@ -190,6 +205,10 @@ definitions:
     - 20305
     - 20306
     - 20307
+    - 20308
+    - 20309
+    - 20310
+    - 20311
     - 20401
     - 20402
     - 20403
@@ -272,6 +291,10 @@ definitions:
     - DatabaseOasVersionError
     - PrismaQueryError
     - PrismaMigrateError
+    - PrismaCreateMigrationError
+    - PrismaApplyMigrationError
+    - PrismaDiffError
+    - PrismaShadowDatabaseUrlEmptyError
     - StoragePingError
     - StorageDisabledError
     - StorageMkdirError
@@ -852,6 +875,77 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/i18n.CustomError'
+  /datasource/applyMigration/{dataName}:
+    post:
+      description: '"应用迁移"'
+      parameters:
+      - description: model名称
+        in: path
+        name: dataName
+        required: true
+        type: string
+      responses:
+        "200":
+          description: 迁移成功的名称列表
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/i18n.CustomError'
+      tags:
+      - datasource
+  /datasource/createMigration/{dataName}:
+    post:
+      description: '"创建迁移"'
+      parameters:
+      - description: model名称
+        in: path
+        name: dataName
+        required: true
+        type: string
+      - description: 迁移名称
+        in: query
+        name: version
+        required: true
+        type: string
+      responses:
+        "200":
+          description: 生成的迁移名称
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/i18n.CustomError'
+      tags:
+      - datasource
+  /datasource/diff/{dataName}:
+    post:
+      description: '"生成增量迁移脚本"'
+      parameters:
+      - description: model名称
+        in: path
+        name: dataName
+        required: true
+        type: string
+      - description: 增量迁移选项
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/datasource.DiffCmdOption'
+      responses:
+        "200":
+          description: 生成的增量脚本
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/i18n.CustomError'
+      tags:
+      - datasource
   /datasource/dmmf/{dataName}:
     get:
       description: '"获取dmmf"'
@@ -937,9 +1031,7 @@ paths:
           type: string
       responses:
         "200":
-          description: prisma文本
-          schema:
-            type: string
+          description: OK
         "400":
           description: Bad Request
           schema:
